Fix HTML character encoding issues

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ p{
 
 <div class="container">
     <h1>Happy Birthday My Love ❤️</h1>
-    <p><b>Dear [Her Name],</b></p>
+    <p><b>Dear Dobu,</b></p>
 
     <p>
         You are my happiness, my calm, and my forever.
@@ -230,3 +230,4 @@ function closePopup(){
 
 </body>
 </html>
+
