--- a/index.html
+++ b/index.html
@@ -2,77 +2,75 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <title>Happy Birthday My Love ❤️</title>
 
 <style>
-/* ================= BASE ================= */
 *{
     box-sizing:border-box;
 }
 
+/* ===== BODY ===== */
 body{
     margin:0;
-    min-height:100dvh; /* FIX mobile height */
-    background:linear-gradient(135deg,#ff9a9e,#fecfef,#ffecd2);
-    background-size:400% 400%;
-    animation:bgMove 8s ease infinite;
-    font-family:Arial, sans-serif;
+    min-height:100svh; /* auto-adjust mobile height */
     display:flex;
     justify-content:center;
     align-items:center;
-    padding:20px;
+    padding:16px;
+    background:linear-gradient(135deg,#ff9a9e,#fecfef,#ffecd2);
+    font-family:Arial, sans-serif;
 }
 
-/* ================= CARD ================= */
+/* ===== CARD ===== */
 .container{
-    background:#ffffffee;
     width:100%;
-    max-width:650px;
-    padding:30px;
+    max-width:680px;   /* desktop max */
+    background:#ffffffee;
     border-radius:22px;
-    box-shadow:0 15px 40px rgba(0,0,0,0.25);
+    padding:clamp(18px, 4vw, 40px);
     text-align:center;
-    animation:fadeUp 1s ease;
+    box-shadow:0 15px 35px rgba(0,0,0,0.25);
 }
 
-/* ================= TEXT ================= */
+/* ===== TEXT ===== */
 h1{
+    font-size:clamp(1.9rem, 5vw, 3rem);
     color:#ff6b6b;
-    font-size:2.4rem;
-    margin-bottom:10px;
+    margin:0 0 10px;
 }
 
 p{
-    font-size:1rem;
+    font-size:clamp(0.95rem, 3.8vw, 1.15rem);
     line-height:1.6;
     color:#444;
 }
 
 .hearts{
-    font-size:1.8rem;
+    font-size:clamp(1.5rem, 5vw, 2.2rem);
     margin:10px 0;
 }
 
 .cake{
-    font-size:3rem;
+    font-size:clamp(2.5rem, 8vw, 4rem);
     margin:10px 0;
 }
 
-/* ================= BUTTON ================= */
+/* ===== BUTTON ===== */
 .btn{
-    margin-top:20px;
     width:100%;
+    max-width:320px;
+    margin:20px auto 0;
     padding:14px;
-    font-size:1.1rem;
+    font-size:clamp(1rem, 4vw, 1.2rem);
     background:#ff6b6b;
-    color:white;
+    color:#fff;
     border:none;
     border-radius:30px;
     cursor:pointer;
 }
 
-/* ================= POPUP ================= */
+/* ===== POPUP ===== */
 .popup{
     position:fixed;
     inset:0;
@@ -80,18 +78,19 @@ p{
     display:none;
     justify-content:center;
     align-items:center;
+    padding:16px;
     z-index:1000;
 }
 
 .popup-content{
+    width:100%;
+    max-width:500px;
+    max-height:85svh; /* auto height */
     background:white;
-    width:90%;
-    max-width:420px;
-    max-height:85vh;
-    padding:25px;
-    border-radius:20px;
+    border-radius:22px;
+    padding:clamp(18px, 4vw, 30px);
+    overflow-y:auto; /* safe scroll */
     text-align:center;
-    overflow-y:auto; /* FIX overflow */
 }
 
 .close{
@@ -101,80 +100,32 @@ p{
     color:#ff6b6b;
 }
 
-/* ================= STICKERS (DESKTOP ONLY) ================= */
+/* ===== OPTIONAL STICKERS (DESKTOP ONLY) ===== */
 .sticker{
     position:absolute;
     width:80px;
     border-radius:18px;
-    animation:float 6s ease-in-out infinite;
 }
 
-/* ================= BALLOONS ================= */
-.balloon{
-    position:fixed;
-    bottom:-60px;
-    font-size:2rem;
-    animation:floatUp 6s linear infinite;
-    opacity:0.7;
-}
-
-/* ================= ANIMATIONS ================= */
-@keyframes bgMove{
-    0%{background-position:0% 50%;}
-    50%{background-position:100% 50%;}
-    100%{background-position:0% 50%;}
-}
-
-@keyframes fadeUp{
-    from{opacity:0;transform:translateY(20px);}
-    to{opacity:1;transform:translateY(0);}
-}
-
-@keyframes floatUp{
-    from{transform:translateY(0);}
-    to{transform:translateY(-120vh);}
-}
-
-/* ================= 📱 MOBILE FIXES ================= */
+/* ===== MOBILE SAFETY ===== */
 @media (max-width: 600px){
-
-    /* Hide stickers on phone */
-    .sticker{
-        display:none;
-    }
-
-    h1{
-        font-size:2rem;
-    }
-
-    .container{
-        padding:22px;
-    }
-
-    /* Only 2 balloons */
-    .balloon:nth-child(n+3){
-        display:none;
-    }
+    .sticker{ display:none; }
 }
 </style>
 </head>
 
 <body>
 
-<!-- DESKTOP STICKERS -->
+<!-- OPTIONAL DESKTOP STICKERS -->
 <img src="bubu1.jpeg" class="sticker" style="top:10%;left:5%;">
 <img src="bubu2.jpeg" class="sticker" style="top:15%;right:5%;">
-
-<!-- BALLOONS -->
-<div class="balloon" style="left:20%">🎈</div>
-<div class="balloon" style="left:70%">🎈</div>
 
 <div class="container">
     <h1>Happy Birthday My Love ❤️</h1>
     <p><b>Dear [Her Name],</b></p>
     <p>
         You are my happiness, my peace, and my forever.
-        Every moment with you means everything to me.
+        Every moment with you is precious to me.
     </p>
 
     <div class="hearts">💖 💕 💖</div>
@@ -189,12 +140,11 @@ p{
         <span class="close" onclick="closePopup()">×</span>
         <h2>💌 My Love Letter</h2>
         <p>
-            You are my favorite person, my safest place,
-            and my greatest blessing.
+            You are my safest place, my biggest blessing,
+            and my forever love.
         </p>
         <p>
-            I promise to love you today,
-            tomorrow, and forever.
+            I promise to choose you every single day.
         </p>
         <p><b>Happy Birthday ❤️</b></p>
     </div>
