--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Happy Birthday My Love ❤️</title>
 
 <style>
+/* ===== RESET ===== */
 *{
     box-sizing:border-box;
 }
@@ -13,61 +14,63 @@
 /* ===== BODY ===== */
 body{
     margin:0;
-    min-height:100svh; /* auto-adjust mobile height */
+    min-height:100dvh;     /* auto height fix */
+    background:linear-gradient(135deg,#ff9a9e,#fecfef,#ffecd2);
+    background-size:400% 400%;
+    animation:bgMove 8s ease infinite;
+    font-family:Arial, sans-serif;
     display:flex;
     justify-content:center;
     align-items:center;
-    padding:16px;
-    background:linear-gradient(135deg,#ff9a9e,#fecfef,#ffecd2);
-    font-family:Arial, sans-serif;
+    padding:16px;          /* auto width spacing */
 }
 
 /* ===== CARD ===== */
 .container{
-    width:100%;
-    max-width:680px;   /* desktop max */
+    width:100%;            /* auto width */
+    max-width:680px;       /* desktop limit */
+    padding:clamp(18px, 4vw, 40px);
     background:#ffffffee;
     border-radius:22px;
-    padding:clamp(18px, 4vw, 40px);
+    box-shadow:0 15px 40px rgba(0,0,0,0.25);
     text-align:center;
-    box-shadow:0 15px 35px rgba(0,0,0,0.25);
 }
 
 /* ===== TEXT ===== */
 h1{
-    font-size:clamp(1.9rem, 5vw, 3rem);
+    font-size:clamp(1.8rem, 5vw, 3rem);
     color:#ff6b6b;
-    margin:0 0 10px;
+    margin-bottom:10px;
 }
 
 p{
-    font-size:clamp(0.95rem, 3.8vw, 1.15rem);
+    font-size:clamp(0.95rem, 3.8vw, 1.1rem);
     line-height:1.6;
     color:#444;
 }
 
+/* ===== ICONS ===== */
 .hearts{
-    font-size:clamp(1.5rem, 5vw, 2.2rem);
+    font-size:clamp(1.4rem, 5vw, 2rem);
     margin:10px 0;
 }
 
 .cake{
-    font-size:clamp(2.5rem, 8vw, 4rem);
+    font-size:clamp(2.2rem, 8vw, 3.5rem);
     margin:10px 0;
 }
 
 /* ===== BUTTON ===== */
 .btn{
     width:100%;
-    max-width:320px;
-    margin:20px auto 0;
     padding:14px;
     font-size:clamp(1rem, 4vw, 1.2rem);
     background:#ff6b6b;
-    color:#fff;
+    color:white;
     border:none;
     border-radius:30px;
     cursor:pointer;
+    margin-top:16px;
 }
 
 /* ===== POPUP ===== */
@@ -79,53 +82,69 @@ p{
     justify-content:center;
     align-items:center;
     padding:16px;
-    z-index:1000;
 }
 
 .popup-content{
     width:100%;
-    max-width:500px;
-    max-height:85svh; /* auto height */
+    max-width:420px;
     background:white;
-    border-radius:22px;
-    padding:clamp(18px, 4vw, 30px);
-    overflow-y:auto; /* safe scroll */
-    text-align:center;
+    padding:clamp(16px, 4vw, 30px);
+    border-radius:20px;
+    max-height:90dvh;     /* auto height */
+    overflow:auto;        /* auto scroll */
 }
 
 .close{
     font-size:1.8rem;
-    float:right;
     cursor:pointer;
     color:#ff6b6b;
+    float:right;
 }
 
-/* ===== OPTIONAL STICKERS (DESKTOP ONLY) ===== */
+/* ===== IMAGES ===== */
 .sticker{
-    position:absolute;
-    width:80px;
+    max-width:80px;
+    width:18vw;
+    height:auto;          /* auto image height */
     border-radius:18px;
+    display:none;         /* hide on mobile by default */
 }
 
-/* ===== MOBILE SAFETY ===== */
-@media (max-width: 600px){
-    .sticker{ display:none; }
+/* ===== DESKTOP ONLY ===== */
+@media (min-width: 768px){
+    .sticker{
+        display:block;
+        position:absolute;
+        animation:float 6s ease-in-out infinite;
+    }
+}
+
+/* ===== ANIMATION ===== */
+@keyframes bgMove{
+    0%{background-position:0% 50%;}
+    50%{background-position:100% 50%;}
+    100%{background-position:0% 50%;}
+}
+
+@keyframes float{
+    0%,100%{transform:translateY(0);}
+    50%{transform:translateY(-25px);}
 }
 </style>
 </head>
 
 <body>
 
-<!-- OPTIONAL DESKTOP STICKERS -->
-<img src="bubu1.jpeg" class="sticker" style="top:10%;left:5%;">
-<img src="bubu2.jpeg" class="sticker" style="top:15%;right:5%;">
+<!-- STICKERS (AUTO SCALE) -->
+<img src="bubu1.jpeg" class="sticker" style="top:10%;left:6%;">
+<img src="bubu2.jpeg" class="sticker" style="top:14%;right:6%;">
 
 <div class="container">
     <h1>Happy Birthday My Love ❤️</h1>
-    <p><b>Dear [Her Name],</b></p>
+    <p><b>Dear Dobu,</b></p>
     <p>
         You are my happiness, my peace, and my forever.
-        Every moment with you is precious to me.
+        Every moment with you feels special.
     </p>
 
     <div class="hearts">💖 💕 💖</div>
@@ -140,11 +159,12 @@ p{
         <span class="close" onclick="closePopup()">×</span>
         <h2>💌 My Love Letter</h2>
         <p>
-            You are my safest place, my biggest blessing,
-            and my forever love.
+            You are my favorite person, my safest place,
+            and the best chapter of my life.
         </p>
         <p>
-            I promise to choose you every single day.
+            I promise to love you today, tomorrow,
+            and forever.
         </p>
         <p><b>Happy Birthday ❤️</b></p>
     </div>
